[gd_scene load_steps=5 format=3 uid="uid://d0cefv5mkn113"]

[ext_resource type="FontFile" uid="uid://qwrn5esm1jyj" path="res://Fonts/VCR_OSD_MONO_1.001.ttf" id="1_4muq5"]
[ext_resource type="Script" uid="uid://byfg5d7xwoujd" path="res://DialogueUI/scripts/DialogueUI.gd" id="1_u0ief"]

[sub_resource type="LabelSettings" id="LabelSettings_alv32"]
font = ExtResource("1_4muq5")
font_size = 14

[sub_resource type="LabelSettings" id="LabelSettings_r686y"]
font = ExtResource("1_4muq5")
font_size = 14

[node name="DialogueUI" type="CanvasLayer"]
visible = false
script = ExtResource("1_u0ief")

[node name="nameCon" type="ColorRect" parent="."]
anchors_preset = -1
anchor_top = 0.583333
anchor_right = 0.223438
anchor_bottom = 0.663333
offset_top = 10.0
offset_bottom = 9.2
grow_horizontal = 2
grow_vertical = 2
color = Color(0.172833, 0.172833, 0.172833, 0.882353)
metadata/_edit_use_anchors_ = true

[node name="nameLabel" type="Label" parent="nameCon"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.041958
anchor_top = 0.0892857
anchor_right = 0.608392
anchor_bottom = 0.910714
text = "Test name"
label_settings = SubResource("LabelSettings_alv32")
horizontal_alignment = 1
vertical_alignment = 1
metadata/_edit_use_anchors_ = true

[node name="dialogueCon" type="ColorRect" parent="."]
anchors_preset = -1
anchor_left = 0.0015625
anchor_top = 0.680556
anchor_right = 1.00156
anchor_bottom = 0.995222
offset_left = -1.0
offset_top = 2.99998
offset_right = -1.0
offset_bottom = 4.72
grow_horizontal = 2
grow_vertical = 2
color = Color(0.172833, 0.172833, 0.172833, 0.882353)
metadata/_edit_use_anchors_ = true

[node name="dialogueLabel" type="Label" parent="dialogueCon"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 10.0
offset_top = 5.0
offset_right = -10.0
offset_bottom = -5.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(1, 1.01709)
text = "Test Text"
label_settings = SubResource("LabelSettings_r686y")
autowrap_mode = 3
clip_text = true
text_overrun_behavior = 1
metadata/_edit_use_anchors_ = true

[node name="Timer" type="Timer" parent="."]
wait_time = 2.0

[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
